<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Top Bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/statistics_button"
            android:onClick="goBack"
            android:src="@drawable/back6" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#999" />

    <TextView
        android:id="@+id/weekDayText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/weekDayQuestion" />

    <Spinner
        android:id="@+id/weekDay_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25sp" >

        <ImageView
            android:id="@+id/review_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:paddingLeft="10dp"
            android:contentDescription="@string/statistics_button"
            android:src="@drawable/review_icon" />

        <TextView
            android:id="@+id/Rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:paddingTop="7dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="rate"
            android:text="@string/rate"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/comments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/comments"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:onClick="reset"
        android:paddingTop="40dp"
        android:text="@string/reset"
        android:textSize="24sp" />

</LinearLayout>