<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/albie.development.pushupcounter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Top Bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/appname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#999" />

    <!-- PUSHUP IMAGE AND TEXT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20sp"
        android:paddingTop="25sp" >

        <ImageView
            android:id="@+id/pushup_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:contentDescription="@string/statistics_button"
            android:src="@drawable/pushup_icon" />

        <TextView
            android:id="@+id/pushup_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:clickable="true"
            android:gravity="left"
            android:onClick="openPushupActivity"
            android:text="@string/pushup_button"
            android:textSize="32sp" />
        <!-- android:textStyle="bold" -->

    </LinearLayout>

    <!-- STATISTICS IMAGE AND TEXT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25sp"
        android:paddingTop="25sp" >

        <ImageView
            android:id="@+id/statistics_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:contentDescription="@string/statistics_button"
            android:src="@drawable/statistics1" />

        <TextView
            android:id="@+id/statistics_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:clickable="true"
            android:gravity="left"
            android:onClick="openStatisticsActivity"
            android:text="@string/statistics_button"
            android:textSize="32sp" />
        <!--
  		 <albie.development.pushupcounter.CustomTextView
  		 	  android:id="@+id/statistics_text"
   			  android:layout_width="0dp"
  			  android:layout_height="wrap_content"
  			  android:gravity="left"
  	 		  android:text="@string/statistics_button"
  	 		  android:textSize="42sp"
  			  android:layout_weight= "0.7"
  			  android:onClick="openStatisticsActivity"                
       		  android:clickable="true"
       		  custom:typeface="Helvetica Neue Ultra Light/HelveticaNeue-UltraLight.otf"	 />
        -->
    </LinearLayout>

    <!-- JOURNAL IMAGE AND TEXT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25sp"
        android:paddingTop="25sp" >

        <ImageView
            android:id="@+id/reminders_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:contentDescription="@string/reminders_button"
            android:src="@drawable/journal_1" />

        <TextView
            android:id="@+id/journal_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:clickable="true"
            android:gravity="left"
            android:onClick="openJournalActivity"
            android:text="@string/journal_button"
            android:textSize="32sp" />
    </LinearLayout>

    <!-- SETTINGS IMAGE AND TEXT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25sp"
        android:paddingTop="25sp" >

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:contentDescription="@string/settings_button"
            android:src="@drawable/settings38" />

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:clickable="true"
            android:gravity="left"
            android:onClick="openSettingsActivity"
            android:text="@string/settings_button"
            android:textSize="32sp" />
    </LinearLayout>
 

</LinearLayout>